# fdrive

./: Cargo.toml  Jenkinsfile  README.md
crates/fdrive-android/: Cargo.toml  uniffi.toml
crates/fdrive-android/android/app/: build.gradle.kts
crates/fdrive-android/android/app/src/main/java/app/filestash/sync/: FilestashProvider.kt  Native.kt
crates/fdrive-android/android/app/src/main/java/app/filestash/sync/ui/: LoginScreen.kt
crates/fdrive-android/src/: lib.rs
crates/fdrive-android/tests/: adapter.rs
crates/fdrive-core/: Cargo.toml
crates/fdrive-core/src/: activity.rs  activity_test.rs  config.rs  config_test.rs  engine.rs  engine_download.rs  engine_ledger.rs  engine_test.rs  engine_upload.rs  lib.rs  scheduler.rs  sdk.rs
crates/fdrive-core/src/engine/: cache.rs  cache_test.rs  delta.rs  delta_test.rs  download.rs  download_test.rs  facade.rs  scheduler.rs  testkit.rs  tests.rs  upload.rs  view.rs  view_test.rs
crates/fdrive-core/tests/: interop.rs  sdk.rs
crates/fdrive-ios/: Cargo.toml  uniffi.toml
crates/fdrive-ios/ios/: .gitignore  project.yml
crates/fdrive-ios/ios/Shared/: AdapterHolder.swift
crates/fdrive-ios/src/: lib.rs
crates/fdrive-ios/tests/: adapter.rs  e2e.rs
crates/fdrive-linux/: Cargo.toml
crates/fdrive-linux/benches/: sqlite.rs
crates/fdrive-linux/src/: adapter.rs  adapter_test.rs  args.rs  gui.rs  log.rs  main.rs  webview.rs  wire.rs  xattr.rs  xattr_test.rs
crates/fdrive-linux/src/gui/: dashboard.rs  login.rs  tray.rs
crates/fdrive-linux/tests/: adapter.rs
crates/fdrive-linux/tests/e2e/: main.rs  rig.rs
crates/fdrive-mac/: Cargo.toml
crates/fdrive-mac/macos/: .gitignore  project.yml
crates/fdrive-mac/macos/App/: MountManager.swift
crates/fdrive-mac/macos/App/Assets.xcassets/AppIcon.appiconset/: Contents.json
crates/fdrive-mac/src/: lib.rs
crates/fdrive-testkit/: Cargo.toml
crates/fdrive-testkit/src/: lib.rs
crates/fdrive-windows/: Cargo.toml  build.rs
crates/fdrive-windows/src/: adapter.rs  args.rs  gui.rs  lib.rs  log.rs  main.rs  webview.rs  wire.rs
crates/fdrive-windows/src/gui/: dashboard.rs  login.rs  tray.rs
crates/fdrive-windows/src/wire/: viewer.rs  watcher.rs
crates/fdrive-windows/tests/e2e/: main.rs  rig.rs
scripts/: ios-build.sh  linux-e2e.sh  mac-build.sh  sqlite-bench.sh  windows-e2e.ps1
