[workspace]
members = [
    "crates/fdrive-android",
    "crates/fdrive-core",
    "crates/fdrive-ios",
    "crates/fdrive-linux",
    "crates/fdrive-mac",
    "crates/fdrive-windows",
]
default-members = [
    "crates/fdrive-android",
    "crates/fdrive-core",
    "crates/fdrive-ios",
    "crates/fdrive-linux",
    "crates/fdrive-mac",
]
resolver = "2"
