[workspace]
members = [
    "crates/fdrive-android",
    "crates/fdrive-core",
    "crates/fdrive-ios",
    "crates/fdrive-linux",
    "crates/fdrive-mac",
    "crates/fdrive-testkit",
    "crates/fdrive-windows",
]
default-members = [
    "crates/fdrive-android",
    "crates/fdrive-core",
    "crates/fdrive-ios",
    "crates/fdrive-linux",
    "crates/fdrive-mac",
    "crates/fdrive-testkit",
]
resolver = "2"
