[package]
name = "fdrive-mac"
version = "0.1.0"
edition = "2021"

[lib]
name = "fdrive_mac"
crate-type = ["cdylib"]

[dependencies]
fdrive-core = { path = "../fdrive-core" }
tokio = { version = "1", features = ["rt-multi-thread"] }
futures-util = { version = "0.3", default-features = false }
libc = "0.2"
